outputs/main/hsevo_bpp_online_2025-08-07_17-54-43/problem_iter26_response8.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 22
    scores[feasible] = base + near_full_boost + exact_boost = base + near_full_boost + exact_boost - ratio_penalty + dead_penalty + smooth_boost
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 22
    scores[feasible] = base + near_full_boost + exact_boost = base + near_full_boost + exact_boost - ratio_penalty + dead_penalty + smooth_boost
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 22
    scores[feasible] = base + near_full_boost + exact_boost = base + near_full_boost + exact_boost - ratio_penalty + dead_penalty + smooth_boost
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
